Openconnect: cast QWidget to correct widget type used for password field

Previously the PasswordField widget was inherited from QLineEdit and we changed it
to QWidget containing QLineEdit and QComboBox. Then casting it to QLineEdit obviously
didn't work

BUG:375057